--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://static.line-scdn.net/liff/edge/versions/2.2.0/sdk.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vConsole/3.3.4/vconsole.min.js" integrity="sha512-/9dW/D2rWkAaLlyBbFEY50QbnpNP97+j2G9X/8A44xVTvEwYe8jUK3TEANhUbZ3Avr8UDIbcI8zHowc3ibGD+A==" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
@@ -13,5 +15,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
   </body>
 </html>
